project('buse-cpp', 'cpp', version: '1.0.0', default_options : ['warning_level=3', 'werror=false', 'cpp_std=c++20'])

executable('nbd-example', 
  files(
    'src/example.cpp',
    'src/buse.cpp',
    'src/block-operator.cpp',
  ))

executable('block-operator-test', 
  files(
    'src/block-operator-test.cpp',
    'src/block-operator.cpp',
  ))
